infra/k8s/06-vault-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ic-vault-manager
  namespace: integracentro-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ic-vault-manager
  template:
    metadata:
      labels:
        app: ic-vault-manager
    spec:
      containers:
        - name: vault-manager
          image: ghcr.io/rickrgr-22/ic-vault-manager:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: vault-storage
              mountPath: /data/evidencias
      volumes:
        - name: vault-storage
          persistentVolumeClaim:
            claimName: ic-vault-pvc
